maybe whitespace fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,13 @@
 body{
   font-family:'Lato', sans-serif;
 }
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 h1{
   text-align: center;
 }
